devicesinlan 0.1.0 20150519
===========================
- Basic funcionality
- Spanish translation

devicesinlan 0.2.0 20150519
===========================
- Improved class developing
- Add argument to select net interfaz
- MAC address matching is now case insensitive

devicesinlan 0.3.0 20150519
===========================
- Catched exception with arp-scan

devicesinlan 0.4.0 20150524
===========================
- Known devices are now sorted by alias and listed
- Net devices are now sorted by IP address
- You can add and remove Known devices from command line
- Net devices list doesn't show duplicates

devicesinlan 0.5.0 20150617
===========================
- Console output shows the number of devices in the lan

devicesinlan 0.6.0 20150819
===========================
- Added ping search support
- Made my own arp-scanner
- Added ieee-oui.txt database with get-oui from arp-scan

devicesinlan 0.7.0 20160717
===========================
- Added UI.
- First Windows verion

devicesinlan 0.8.0 20170118
===========================
- Added more device types
- Works -a, -r, -l again
- Improved apps dependencies

devicesinlan 0.9.0 20170205
===========================
- Pretty list in console
- Device type added to lists

devicesinlan 0.10.0 XXXXXXXX
============================
- Replaced Color class by colorama package