@@ -6,7 +6,7 @@ Nueva release
 ) Update ieee-oui with get-oui
 2) Modificar todos los ficheros RELEASE CHANGELOG con num subversion +1 y versión nueva
 4) Hacer un make y Actualizar *.ts
-4) Crear el fichero (con release.sh que pone la version automatico) y subirlo a sourceforge
+4) Hacer otro make y crear el fichero (con release.sh que pone la version automatico) y subirlo a sourceforge
 5) Subir al subversion y comprobar que queda subversion +1
 6) Crear un nuevo ebuild con la nueva versión
 8) Subirlo al subversion del portage
