@@ -46,6 +46,8 @@ devicesinlan 0.9.0 20170205
 - Pretty list in console
 - Device type added to lists
 
-devicesinlan 0.10.0 XXXXXXXX
+devicesinlan 0.10.0 20170206
 ============================
 - Replaced Color class by colorama package
+- There is Color in Windows console reports
+
